src/objects/Apttus__AgreementLock__c.object
<CustomObject>
    <description>Represents a lock on the agreement</description>
    <fields>
        <fullName>Apttus__AgreementId__c</fullName>
        <description>ID of the associated agreement</description>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Locks</relationshipLabel>
        <relationshipName>AgreementLocks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__LockedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the user who locked the agreement</description>
        <label>Locked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LockedAgreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__LockedDate__c</fullName>
        <description>Date the agreement was locked.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Locked Date</label>
        <type>DateTime</type>
    </fields>
    <label>Agreement Lock</label>
    <nameField>
        <displayFormat>LK-{0000000000}</displayFormat>
        <label>Lock Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Locks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>